# ofs_app

./: .gitignore  .markdownlint.jsonc  .travis.yml  MANIFEST.in  README.md  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
app_meta_data/: metadata.md
notebooks/: get_creative_fusion_analysis.ipynb
src/: app_interface.py  trapi_exceptions.py  trapi_interface.py
