
[project]
# change name of the app to a fitting name
name = chp_kp_app
# automated semantic versioning
version = attr: my_package.VERSION
# add original developer name
authors=[
    # {name = "example developer"},
    # {email = "example_developer@email.com"}
        {
            name = "example author",
            email = "example_author@email.com"
        },
    ]
# add names of developers assigned to maintain this app
# will almost always be the same as the authors
maintainers=[
        {
            name = "example maintainer",
            email = "example_maintainer@email.com"
        },
    ]
# add a relevent description
description = test
# this uses the readme file as a long form description
long_description = file: README.md
# A list of additional keywords, separated by commas, to be used to assist searching for the distribution in a larger catalog.
keywords = "Knowledge Provider", "Connections Hypothesis Provider"
# this license is universal in chp and should not be changed
license = Apache License 2.0
# declare your dependencies here
# this is functionally the same as the requirements.txt file
dependencies = [
        # add any dependencies here much like you would in a readme.txt
    ]

[options]
package_dir=
    = src
packages=find:

[options.packages.find]
where=src

# not implemented yet
# installs python testing framework for dev environments
# [project.optional-dependencies]
# test = [
#         "pytest < 5.0.0",
#         "pytest-cov[all]"
#     ]

# not implemented yet
# [project.urls]
# homepage = "example.com"
# documentation = "readthedocs.org"
# repository = "github.com"
# changelog = "github.com/me/spam/blob/master/CHANGELOG.md"